--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
 ArtifactDB/* filter=lfs diff=lfs merge=lfs -text
 *ArtifactDB filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
